Added Bio Content to webpage

--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Stephen's Personal Site</title>
+</head>
+
+<body>
+  <h1>Stephen Harvey</h1>
+  <p><em>Junior Front-End Developer.</em></p>
+  <p>I am a junior front-end developer with experience in HTML, CSS and Javascript.</p>
+  <hr>
+  <h3>Education</h3>
+  <ul>
+  <li>The Complete Web Development Bootcamp</li>
+  <li>Code+ by The Learning People</li>
+  </ul>
+  <h3>Hobbies</h3>
+  <ol>
+    <li>Football</li>
+    <li>Weightlifting</li>
+    <li>Cars</li>
+  </ol>
+</body>
+
 </html>
