--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <img src="Images/headshot-circle.png" height="200" width="200" alt="stephen profile picture"/>
   <h1>Stephen Harvey</h1>
   <p><em>Junior Front-End Developer.</em></p>
   <p>I am a junior front-end developer with experience in HTML, CSS and Javascript.</p>
