Added Hyperlinks to Education

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <hr>
   <h3>Education</h3>
   <ul>
-  <li>The Complete Web Development Bootcamp</li>
-  <li>Code+ by The Learning People</li>
+  <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp</a></li>
+  <li><a href="https://www.learningpeople.com/au/offers/coding/code/">Code+ by The Learning People</a></li>
   </ul>
   <h3>Hobbies</h3>
   <ol>
