Added contact details

--- a/contact_me.html
+++ b/contact_me.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Contact Me</title>
+</head>
+
+<body>
+  <h1>My Contact Details</h1>
+  <hr>
+  <p><strong>Email Address:</strong> stephen@rykermedia.com</p>
+  <p><strong>Mobile Number:</strong> +64 211 832 989</p>
+  <p><a href="https://www.instagram.com/stephenharveynz/">Instagram</a> | <a href="https://twitter.com/stephencodes">Twitter</a></p>
+</body>
+
 </html>
