--- a/index.html
+++ b/index.html
@@ -11,12 +11,33 @@
   <h1>Stephen Harvey</h1>
   <p><em>Junior Front-End Developer.</em></p>
   <p>I am a junior front-end developer with experience in HTML, CSS and Javascript.</p>
+  <a href="contact_me.html">Contact Me</a>
   <hr>
   <h3>Education</h3>
   <ul>
   <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp</a></li>
   <li><a href="https://www.learningpeople.com/au/offers/coding/code/">Code+ by The Learning People</a></li>
   </ul>
+  <h3>Work Experience</h3>
+  <table>
+    <thead>
+      <tr>
+        <th>Dates</th>
+        <th>Role</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2013-2020</td>
+        <td>Jump Master at AJ Hackett Bungy New Zealand</td>
+      </tr>
+      <tr>
+        <td>2020-2022</td>
+        <td>Founder & CEO at NextGen Animations</td>
+      </tr>
+      </tbody>
+  </table>
+  <hr>
   <h3>Hobbies</h3>
   <ol>
     <li>Football</li>
