--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 </head>
 
 <body>
-  <img src="Images/headshot-circle.png" height="200" width="200" alt="stephen profile picture"/>
-  <h1>Stephen Harvey</h1>
-  <p><em>Junior Front-End Developer.</em></p>
-  <p>I am a junior front-end developer with experience in HTML, CSS and Javascript.</p>
-  <a href="contact_me.html">Contact Me</a>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Images/headshot-circle.png" height="200" width="200" alt="stephen profile picture" /></td>
+      <td>
+        <h1>Stephen Harvey</h1>
+        <p><em>Junior Front-End Developer.</em></p>
+        <p>I am a junior front-end developer with experience in HTML, CSS and Javascript.</p>
+        <a href="contact_me.html">Contact Me</a>
+      </td>
+    </tr>
+  </table>
   <hr>
   <h3>Education</h3>
   <ul>
-  <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp</a></li>
-  <li><a href="https://www.learningpeople.com/au/offers/coding/code/">Code+ by The Learning People</a></li>
+    <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp</a></li>
+    <li><a href="https://www.learningpeople.com/au/offers/coding/code/">Code+ by The Learning People</a></li>
   </ul>
   <h3>Work Experience</h3>
   <table>
@@ -35,7 +41,7 @@
         <td>2020-2022</td>
         <td>Founder & CEO at NextGen Animations</td>
       </tr>
-      </tbody>
+    </tbody>
   </table>
   <hr>
   <h3>Hobbies</h3>
