Added Skills section

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     <li><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp</a></li>
     <li><a href="https://www.learningpeople.com/au/offers/coding/code/">Code+ by The Learning People</a></li>
   </ul>
+  <hr>
   <h3>Work Experience</h3>
-  <table>
+  <table cellspacing="5">
     <thead>
       <tr>
         <th>Dates</th>
@@ -44,12 +45,26 @@
     </tbody>
   </table>
   <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li>Football</li>
-    <li>Weightlifting</li>
-    <li>Cars</li>
-  </ol>
+<h3>Skills</h3>
+<table cellspacing="5">
+  <tr>
+    <td>HTML(5)</td>
+    <td>⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>CSS</td>
+    <td>⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Javascript</td>
+    <td>⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Project Management</td>
+    <td>⭐⭐⭐⭐</td>
+  </tr>
+</table>
+<hr>
 </body>
 
 </html>
