--- a/contact_me.html
+++ b/contact_me.html
@@ -12,6 +12,17 @@
   <p><strong>Email Address:</strong> stephen@rykermedia.com</p>
   <p><strong>Mobile Number:</strong> +64 211 832 989</p>
   <p><a href="https://www.instagram.com/stephenharveynz/">Instagram</a> | <a href="https://twitter.com/stephencodes">Twitter</a></p>
+  <hr>
+  <h2>Contact Me</h2>
+  <form action="mailto:stephen@rykermedia.com" method="post" enctype="text/plain">
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""><br>
+    <label>Your Email:</label>
+    <input type="email" name="yourEmail" value=""><br>
+    <label>Your Message:</label><br>
+    <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+    <input type="submit" name="">
+  </form>
 </body>
 
 </html>
