Added Body Background color and change hr styleing to dotted

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
 <head>
   <meta charset="utf-8">
   <title>Stephen's Personal Site</title>
+
+  <style>
+
+    body {
+      background-color: #E7F6F2;
+    }
+
+    hr {
+      background-color: transparent;
+      border-style: none;
+      border-top-style: dotted;
+      border-color: grey;
+      border-width: 6px;
+      width: 8%;
+    }
+  </style>
 </head>
 
 <body>
@@ -45,26 +61,26 @@
     </tbody>
   </table>
   <hr>
-<h3>Skills</h3>
-<table cellspacing="5">
-  <tr>
-    <td>HTML(5)</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>CSS</td>
-    <td>⭐⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Javascript</td>
-    <td>⭐⭐</td>
-  </tr>
-  <tr>
-    <td>Project Management</td>
-    <td>⭐⭐⭐⭐</td>
-  </tr>
-</table>
-<hr>
+  <h3>Skills</h3>
+  <table cellspacing="5">
+    <tr>
+      <td>HTML(5)</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>CSS</td>
+      <td>⭐⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Javascript</td>
+      <td>⭐⭐</td>
+    </tr>
+    <tr>
+      <td>Project Management</td>
+      <td>⭐⭐⭐⭐</td>
+    </tr>
+  </table>
+  <hr>
 </body>
 
 </html>
