Moved style elements to CSS sheet

--- a/index.html
+++ b/index.html
@@ -4,22 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Stephen's Personal Site</title>
-
-  <style>
-
-    body {
-      background-color: #E7F6F2;
-    }
-
-    hr {
-      background-color: transparent;
-      border-style: none;
-      border-top-style: dotted;
-      border-color: grey;
-      border-width: 6px;
-      width: 8%;
-    }
-  </style>
+<link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
